--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -25,6 +25,7 @@
 .login-logo-img {
   width: 220px;
   margin-bottom: 16px;
+  filter: brightness(0) invert(1) contrast(2);
 }
 
 .login-header p {
